--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -4,6 +4,7 @@
     <item android:drawable="@android:color/white" />
 
     <!-- You can insert your own image assets here -->
+    <!-- <item android: drawable= "@color/red"/> -->
     <item>
         <bitmap
             android:gravity="center"
